--- a/01_学成在线静态页面/小结.md
+++ b/01_学成在线静态页面/小结.md
@@ -8,17 +8,17 @@
 
 - 行内元素纵向撑不起高度，margin，padding都不行
 
-- span装文本，鼠标移上去是可复制样式。有需要考虑要不要改成箭头，或者换其他标签
+- span装文本，鼠标移上去是可复制样式。根据需要考虑要不要改成箭头，或者换其他标签
 	
 - **静态页面的伪数据比设计图多加几行/列，看看样式会不会变形**
 
 - 靠内部元素撑起空间时，从内到外写；固定父元素宽高时，从外到内写
 
-- 尽量用margin-top和margin-left调整元素间位置，自己调整自己。不要靠A元素去挤来定B元素的位置，尤其不要几个元素的margin、padding混用调整位置（方便样式改动）
+- 尽量用margin-top和margin-left调整元素间位置，自己调整自己，少用A元素挤B元素来确定位置。尤其不要多个元素的margin、padding混用来调整位置（方便样式改动）
 
 - 默认盒模型下，设置了margin、padding、border后记得去调整width和height
 
-- img和background都能展示图片，background更好控制，除了根据图片的作用选择，个人觉得还可以考虑：类似logo之类不怎么变动的可以用background；要经常从后台传数据更新的用img
+- img和background都能展示图片，background更好控制，除了根据图片的作用选择，个人觉得还可以考虑：类似logo之类基本不变动的可以用background；要从数据库取图片的用img
 > 频繁刷新静态页面后发现，background每次刷新都会闪，img不闪
 
 
@@ -36,5 +36,5 @@
 - 学习到布局原则/习惯:
 
 > 1. 纵向标准流，横向float
-> 2. 分析完有思路后，按纵向的块一行一行完整写(不要一次写很多结构，看的累)
+> 2. 有大纲思路后，按纵向的块一行一行完整写(不要一次性写很多结构再慢慢css调整，看的累)
 
